<resources>
    <string name="app_name">FamilyMapClient</string>

    <!-- Field Names -->
    <string name="host">Server Host:</string>
    <string name="port">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>

    <!-- Button Names -->
    <string name="signIn">SIGN IN</string>
    <string name="register">REGISTER</string>

    <!-- Map Stuff -->
    <string name="mainActivityTitle">Map</string>
    <string name="mapFragmentMessage">Select an event to see more details</string>
    <string name="searchMenu">Search</string>
    <string name="searchSelected">Search not yet implemented</string>
    <string name="settingMenu">Settings</string>
    <string name="settingSelected">Settings not yet implemented</string>
    
    <!-- Person Stuff -->
    <string name="eventTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>
</resources>